# cmake-hot-reload-example

./: .clang-format  CMakeLists.txt  README.md
include/: mylib.h
src/: main.cpp  mylib.cpp  mylib.h  mylib_load.cpp  mylib_load.h  run_command.cpp  run_command.h  win32.cpp  win32.h
